# tabread

./: CMakeLists.txt  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
actions/: CMakeLists.txt
actions/include/: action.h  resource_provider.h
actions/src/: action.cpp
actions/tests/: CMakeLists.txt
actions/tests/include/: actions_tests.h
actions/tests/src/: actions_tests.cpp  app.cpp
imgfilter/: CMakeLists.txt
imgfilter/include/: contour_filter.h  image_filter.h  ocr_filter.h
imgfilter/include/contour/: contour_area_filter.h
imgfilter/include/helpers/: process_image.h
imgfilter/include/image/: adaptive_threshold.h  clear_highlight.h  convert_gray.h  crop.h
imgfilter/src/: ocr_filter.cpp
imgfilter/src/contour/: contour_area_filter.cpp
imgfilter/src/helpers/: process_image.cpp
imgfilter/src/image/: adaptive_threshold.cpp  clear_highlight.cpp  convert_gray.cpp  crop.cpp
imgfilter/tests/: CMakeLists.txt
imgfilter/tests/src/: helper_functions_tests.cpp
tabread/: CMakeLists.txt
tabread/include/: application_context.h  application_params.h  check_params.h  dump_window.h  fill_params.h  input_image_list.h  task_async_ocr.h  task_executor.h  version.h.in
tabread/src/: application_context.cpp  application_params.cpp  check_params.cpp  dump_window.cpp  fill_params.cpp  input_image_list.cpp  tabread.cpp  task_async_future.cpp  task_async_ocr.cpp  task_async_par.cpp  task_executor.cpp
text/: CMakeLists.txt
text/include/: format.h  recognize.h  text_filter.h
text/src/: format.cpp  recognize.cpp  text_filter.cpp
w32wrap/: CMakeLists.txt
w32wrap/include/: lazy_value.h  win32_utils.h  window_manager.h  window_ptr.h  window_rect.h
w32wrap/src/: win32_utils.cpp  window_manager.cpp  window_ptr.cpp
w32wrap/tests/w32test/: CMakeLists.txt
w32wrap/tests/w32test/src/: w32test.cpp
